# kb-yaml-to-lens

./: .dockerignore  .gitignore  .markdownlint.jsonc  .markdownlintignore  .yamlfix.toml  .yamllint  404.html  AGENTS.md  CI_WORKFLOW_UPDATES.md  CLAUDE_PROJECT_MANAGER_WORKFLOW.md  CLAUDE_PR_REVIEW_GUIDE.md  CODERABBIT.md  CODERABBIT_INTERACTION_REQUIREMENTS.md  CODE_STYLE.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  DATATABLE_VALIDATION.md  DOCKER_BINARY_WORKFLOW_SPEC.md  Dockerfile  GHCR_IMPLEMENTATION_SUMMARY.md  GITHUB_CLI_PR_REVIEWS.md  IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION_PLAN_GITHUB_PAGES.md  LICENSE  MERGE_CONFLICT_FIX.md  Makefile  NEXT_STEPS_FOR_COPILOT.md  README.md  README_PLANNING_COMPLETE.md  TYPECHECK_CHANGES.md  WORKFLOW_AUTOMATION_PLAN.md  WORKFLOW_REVIEW.md  agents.md  architecture.md  build_binaries.py  dashboard.ndjson  dashboards.ndjson  documentation_update_process.md  implementation_plan.md  index.html  (+11 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: create-issues.md
.github/scripts/: MIGRATION_GUIDE.md  README.md  gh-check-latest-review.sh  gh-check-repo-activity.sh  gh-close-issue-with-comment.sh  gh-create-issue-report.sh  gh-get-comments-since.sh  gh-get-latest-review.sh  gh-get-pr-info.sh  gh-get-review-threads.sh  gh-minimize-outdated-comments.sh  gh-parse-repo.sh  gh-post-pr-comment.sh  gh-resolve-review-thread.sh
.github/workflows/: README.md  build-binaries.yml  build-kibana-fixture-image.yml  build-kibana-fixture-image.yml.template  claude-address-coderabbit-feedback.yml  claude-on-coderabbit-feedback.yml  claude-on-issue-mention.yml  claude-on-mention-assist.yml  claude-on-mention-create-issues.yml  claude-on-mention.yml  claude-on-merge-conflict.yml  claude-on-open-label.yml  claude-on-open-or-label.yml  claude-on-pr-mention.yml  claude-project-manager-report.yml  claude-project-manager.yml  deploy-gh-pages.yml  docker-build-publish.yml  docs.yml  gemini-issue-comment.yml  lint-test-build.yml  notify-build-failure.yml  publish-to-pypi.yml  run-claude.yml  test-vscode-extension.yml  test.yml  tidy-pr.yml
CLI/: index.html
GitHub/: README.md  claude-address-coderabbit-feedback.yml  claude-on-mention-assist.yml  claude-on-mention-create-issues.yml  claude-on-merge-conflict.yml  claude-on-open-or-label.yml  claude-project-manager-report.yml  tidy-pr.yml
api/: index.html
api/controls/: index.html
api/dashboard/: index.html
api/filters/: index.html
api/panels/: index.html
api/queries/: index.html
architecture/: index.html
configs/: audit-events-summary.yaml  empty-dashboard-summary.yaml  item-usages-summary.yaml  markdown-only-summary.yaml  pie-chart-only-summary.yaml  signin-attempts-summary.yaml  vertical-bar-only-summary.yaml
configs/complex/: signin-attempts-summary.yaml
configs/simple/: markdown-only-summary.yaml  vertical-bar-only-summary.yaml
dashboard_compiler/: __init__.py  compiler.py  dashboard_compiler.py  kibana_client.py  models.py
docs/: CLI.md  CONTRIBUTING.md  DISTRIBUTION.md  base.md  color-palette-proposal.md  esql-pie-chart-capabilities.md  index.md  kibana-architecture.md  kibana-fixture-generator-guide.md  ode-to-reference-lines.md  programmatic-usage.md  pypi-publishing.md  quickstart.md  refactoring-analysis.md  reference-lines-validation.md  troubleshooting.md  vscode-extension.md  yaml_reference.md
examples/: README.md  basic_markdown.py  basic_metric.py  dynamic_generation.py  multi_panel.py  with_filters_controls.py
fixture-generator/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.ghcr  Dockerfile.optimized  GHCR.md  ISSUES.md  Makefile  README.md  docker-compose.ghcr.yml  docker-compose.yml  generate-all.js  generator-utils.js  mock-dataviews.js  package.json  validate_formula_output.py
github/: README.md  build-binaries.yml  claude-on-coderabbit-feedback.yml  create-release.yml  docker-build-publish.yml  lint-test-build.yml  publish-to-testpypi.yml  test-coverage.yml  test.yml
inputs/: esql-controls-example.yaml  esql-controls-metrics-test.yaml  heatmap-example.yaml  maps-example.yaml  test-xy-axis-features.yaml  test-xy-axis-simple.yaml
kibana-architecture/: index.html
kibana-fixture-generator-guide/: index.html
output/: aerospike-namespace-metrics.ndjson  aerospike-node-metrics.ndjson  aerospike-overview.ndjson  aerospike-trio.ndjson  aerospike.ndjson  compiled_dashboards.ndjson  config.ndjson  controls.ndjson  empty.ndjson  one-area-percent-timestamp-two-series.ndjson  one-area-stacked-timestamp-two-series.ndjson  one-area-unstacked-timestamp-two-series.ndjson  one-filter.ndjson  one-horizontal-bar-unstacked-timestamp-two-series.ndjson  one-line-unstacked-timestamp-two-series.ndjson  one-link.ndjson  one-markdown.ndjson  one-metrics-primary-unique-count.ndjson  one-pie-chart.ndjson  one-query.ndjson  one-table-two-rows-one-metric.ndjson  one-table-two-rows-split-metric-sorted-width.ndjson  one-vertical-bar-unstacked-timestamp-breakdown.ndjson
plans/: documentation_correction_plan.md  documentation_correction_verify.md
programmatic-usage/: index.html
quickstart/: index.html
samples/: empty dashboard.json  markdown-only.json  pie-chart-only.json  vertical-bar-only.json
scripts/: build_binaries.py  compile_configs_to_ndjson.py  compile_docs.py  github_pr_mcp_server.py  snapshots_to_ndjson.py  test_binary_smoke.sh  test_docker_smoke.sh  validate_ghcr_setup.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_compiler.py  test_documentation_links.py  test_esql_xy_e2e.py  test_example_dashboards.py  test_example_scripts.py  test_examples.py  test_examples.py.disabled  test_fixture_validation.py  test_kibana_client.py  test_markdown_examples.py  test_models_base.py  test_models_dashboard.py  test_models_lens.py  test_models_panels.py  test_yaml_examples.py
vscode-extension/: .vscodeignore  AGENTS.md  BUILDING.md  CI-WORKFLOW-UPDATE.md  LSP_MIGRATION_GUIDE.md  LSP_POC_ANALYSIS.md  README.md  TESTING.md  esbuild.js  package-lock.json  package.json  proposed-ci-workflow.yml
yaml_reference/: index.html
(+809 files in other folders)
