[project]
name = "dashboard-compiler"
version = "0.1.0"
description = "Compiles dashboard definitions from YAML to Kibana format"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.11.3",
    "beartype>=0.20.2",
    "humanize>=4.12.3",
    "click>=8.1.0",
    "rich-click>=1.9.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "syrupy>=4.9.1",
    "pytest-freezer>=0.4.9",
    "deepdiff>=8.4.2",
    "ruff>=0.11.6",
    "pytest-asyncio>=0.26.0",
    "basedpyright>=1.21.0",
]

[project.scripts]
kb-dashboard = "dashboard_compiler.cli:cli"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto" 
addopts = "-vv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard_compiler"]

[tool.ruff]
line-length = 140
# Assume Python 3.12
target-version = "py312"
# Exclude files/directories listed in .gitignore
respect-gitignore = true
# Add commonly ignored directories
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "reference",
    "**/*.old.py",
]

[tool.ruff.lint]
extend-select = [
    "A", "ARG", "B", "C4", "COM", "DTZ", "E", "EM", "F", "FURB", "I",
    "LOG", "N", "PERF", "PIE", "PLR", "PLW", "PT", "PTH", "Q", "RET",
    "RSE", "RUF", "S", "SIM", "TC", "TID", "TRY", "UP", "W",
    "D",  # Add docstring checks since kb-yaml-to-lens uses them
]
ignore = [
    "COM812",  # Conflicts with formatter
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D413",    # multi-line-summary-second-line
    "D100",    # Ignore missing docstrings for modules
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # Ignore unused imports in __init__.py files
"test/**/*.py" = [
    "PLR2004", # Ignore magic numbers and docstring length in tests
    "W505",
    "INP001",
    "S101", # Ignore use of assert
    "ANN201", # Ignore missing type annotations in tests
    "RUF029", # Ignore await not used in async function
    "RUF059", # Allow unused unpacking in tests
    "TC001", # Allow value imports used only for typing in tests
    "PGH003", # Don't require specific rule exclusions for type checking ignores
    "D104", # Docstrings in public packages
    "E501", # Line too long
]
"src/dashboard_compiler/**/view.py" = [
    "N815", # Ignore casing requirements for view models
    "N803",  # Ignore lowercase arguments in view models
    "D101", # Ignore missing docstrings in view models
]
"src/dashboard_compiler/**/config.py" = [
    "TC001", # Pydantic config models rely on runtime imports for type evaluation
    "TC008", # allow quotes around type alias for forward references
]

[tool.ruff.format]
quote-style = "single" 

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["metering"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 50

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"  # Bumped from basic to standard
reportExplicitAny = false
reportMissingTypeStubs = false
# Allow Pydantic view models to narrow types in subclasses (e.g., str -> Literal['value'])
# This is a common pattern for serialization models
reportIncompatibleVariableOverride = false
include = ["src/dashboard_compiler"]
exclude = [
    "**/test/**",
    "**/.venv/**",
    "**/output/**",
    "**/*.old.py",
]