[project]
name = "dashboard-compiler"
version = "0.1.0"
description = "Compiles dashboard definitions from YAML to Kibana format"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "pyyaml>=6.0.3",
    "pydantic>=2.12",
    "beartype>=0.22",
    "humanize>=4.15",
    "click>=8.3",
    "rich-click>=1.9.0",
    "aiohttp>=3.13",
    "pygls>=2.0.0",
    "lsprotocol>=2024.0.0",
    "prison>=0.2.1",
]

[project.scripts]
kb-dashboard = "dashboard_compiler.cli:cli"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = "-vv"

[tool.inline-snapshot]
format-command = "ruff format"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-freezer>=0.4.9",
    "deepdiff>=8.4.2",
    "ruff>=0.14",
    "pytest-asyncio>=1.3",
    "basedpyright>=1.36",
    "inline-snapshot>=0.31.1",
    "pytest-check-links>=0.9.0",
    "dirty-equals>=0.8.0",
    "pytest-examples>=0.0.18",
    "yamllint>=1.35",
    "yamlfix>=1.17.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocstrings-python>=1.10.0",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dashboard_compiler"

[tool.ruff]
line-length = 140
# Assume Python 3.12
target-version = "py312"
# Add commonly ignored directories
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "reference",
    "**/*.old.py",
]

[tool.ruff.lint]

# When using extend-select, a rule like PLR will enable PLR* rules like PLR0###.
extend-select = [
    "A", "ARG", "B", "C4", "COM", "DTZ", "E", "EM", "F", "FURB", "I",
    "LOG", "N", "PERF", "PIE", "PLR", "PLW", "PT", "PTH", "Q", "RET",
    "RSE", "RUF", "S", "SIM", "TC", "TID", "TRY", "UP", "W",
    "D",  # Add docstring checks since kb-yaml-to-lens uses them
    # Additional quality and safety rules:
    "ANN",  # flake8-annotations - Type annotations
    "PLE",  # Pylint errors - Serious bug detection
    "T10",  # flake8-debugger - Prevent debugger statements
    "ISC",  # flake8-implicit-str-concat - Prevent string concat bugs
    "FA",   # flake8-future-annotations - Modern type hints (PEP 563)
    "PGH",  # pygrep-hooks - Additional code quality checks
    "INP",  # flake8-no-pep420 - Explicit namespace packages
]
ignore = [
    "COM812",  # Conflicts with formatter
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D413",    # multi-line-summary-second-line
    "D100",    # Ignore missing docstrings for modules
    "ANN401",  # Allow typing.Any where needed (Pydantic compatibility)
]

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # Ignore unused imports in __init__.py files
"tests/**/*.py" = [
    "S101", # Allow assert usage in tests
    "PLR2004", # Allow magic values in test assertions
    "ANN001", # Allow missing argument type annotations in tests
    "ANN201", # Allow missing return type annotations in tests
    "INP001", # Tests are not meant to be imported as packages
]
"vscode-extension/python/**/*.py" = [
    "PT009", # Allow unittest-style assertions in test files
    "S101", # Ignore use of assert
    "INP001", # Extension scripts are standalone, not packages
    "ANN201", # Ignore missing type annotations in python extension files
    "E501", # Line too long
    "PLR2004", # Ignore magic numbers in test files
    "B017", # Allow broad exception assertions in test files
    "PT011", # Allow broad pytest.raises in test files
    "PT027", # Allow unittest-style assertRaises in test files
    "PLR0911", # Ignore too many return statements
    "D400", # Ignore docstring formatting in test files
    "D415", # Ignore docstring formatting in test files
]
"src/dashboard_compiler/**/view.py" = [
    "N815", # Ignore casing requirements for view models
    "N803",  # Ignore lowercase arguments in view models
    "D101", # Ignore missing docstrings in view models
    "ANN202", # Ignore missing return type for private serializer methods
    "ERA001", # Allow commented JSON structure documentation
]
"src/dashboard_compiler/**/config.py" = [
    "TC001", # Pydantic config models rely on runtime imports for type evaluation
]

[tool.ruff.format]
quote-style = "single" 

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["dashboard_compiler"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "recommended"
reportExplicitAny = false
reportMissingTypeStubs = false
reportImportCycles = "error"  # Enable circular import detection
# Allow Pydantic view models to narrow types in subclasses (e.g., str -> Literal['value'])
# This is a common pattern for serialization models
reportIncompatibleVariableOverride = false
include = ["src/dashboard_compiler", "tests"]
exclude = [
    "**/.venv/**",
    "**/output/**",
    "**/*.old.py",
]
# Per-directory settings: more lenient for tests
# Tests use dynamic typing patterns that are difficult to type-check strictly
executionEnvironments = [
    { root = "tests", reportUnknownParameterType = false, reportUnknownArgumentType = false, reportUnknownVariableType = false, reportUnknownMemberType = false, reportMissingTypeArgument = false, reportUnusedCallResult = false, reportAny = false, reportArgumentType = false, reportCallIssue = false, reportMissingImports = false, reportMissingParameterType = false },
    { root = "src/dashboard_compiler" },
]

[tool.coverage.run]
source = ["src/dashboard_compiler"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/vscode-extension/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
